# xdg-desktop-portal-rs

./: Cargo.toml  LICENSE-MIT  README.md
.changes/: add-open-uri.md  config.json
.github/workflows/: build.yml  covector-version-or-publish.yml
src/: lib.rs  open_uri.rs  openuri.rs
